[package]
name = "benchmarks"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
executor = { path = "../executor" }
primitives = { path = "../primitives" }
runtime = { path = "../runtime" }
state = { path = "../state" }
logging = { path = "../logging" }
rand = "0.7.3"
parity-scale-codec = { version = "1.3.1", features = ["derive"] }
log = "0.4.8"

[features]
no-access = ["runtime/no-access"]
