[package]
name = "executor"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
runtime = { path =  "../runtime" }
state = { path =  "../state" }
primitives = { path = "../primitives" }

parity-scale-codec = { version = "1.3.1", features = ["derive"] }

num_cpus = "1.13.0"
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.11"
colored = "1.9"
rand = "0.7.3"

[dev-dependencies]
