[package]
name = "executor"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
runtime = { path =  "../runtime" }
state = { path =  "../state" }
primitives = { path = "../primitives" }
logging = { path = "../logging" }
parity-scale-codec = { version = "1.3.1", features = ["derive"] }
num_cpus = "1.13.0"
rand = "0.7.3"
log = "0.4.8"

[dev-dependencies]
