[package]
name = "multi-threaded"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path =  "../runtime" }
state = { path =  "../state" }
primitives = { path = "../primitives" }

num_cpus = "1.13.0"
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.11"
