[package]
name = "runtime"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { path =  "../state" }
primitives = { path = "../primitives" }
parity-scale-codec = "1.3.1"
blake3 = "0.3.4"
