[package]
name = "runtime"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { path =  "../state" }
primitives = { path = "../primitives" }
parity-scale-codec = { version = "1.3.1", features = ["derive"] }
blake3 = "0.3.4"
log = "0.4.8"
